--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
                             and success—perfect for tracking fitness progress and motivating users toward their goals. The project is using response design,
                             viewing in mobiel phone is possible especially the course timeable.
                             There is an admin account for the admin to manage the courses, coaches, users.<br><br>
-                            Test account: <h4><b>>test123456</b</h4> password: <h4><b>123456</b</h4>
+                            Test account: <h4><b>test123456</b</h4> password: <h4><b>123456</b</h4>
                             <br>
                             Admin account: <h4><b>admin123456</b</h4> password: <h4><b>123456</b</h4> 
                             <br>
@@ -351,6 +351,7 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
 
