--- a/public/index.html
+++ b/public/index.html
@@ -127,14 +127,19 @@
                             <span class="tag">CURL</span>
                             <span class="tag">VM Linux os ubuntu</span>
                         </div>
-                        <p>A full-featured workout platform with user authentication, courses enrollment, 
+                            <p>A full-featured workout platform with user authentication, courses enrollment, 
                             track workout with CRUD, fast workout setup for beginner and advanced, chat bot, 
                             week and month analysis, weekly promotions. By using green as it psychologically represents growth, health, 
                             and success—perfect for tracking fitness progress and motivating users toward their goals. The project is using response design,
                             viewing in mobiel phone is possible especially the course timeable.
                             There is an admin account for the admin to manage the courses, coaches, users.<br><br>
-                            Test account: <h4><b>test123456</b</h4> password: <h4><b>123456</b</h4>
-                            Admin account: <h4><b>admin123456</b</h4> password: <h4><b>123456</b</h4> 
+                            Test account: <b>test123456</b> <br>
+                            password: <b>123456</b>
+                            <br>
+                            <br>
+                            Admin account: <b>admin123456</b> 
+                            <br>
+                            password: <b>123456</b> 
                             <br>
                             <br>(For security reason do not Remember me, else it will fali to login)
                             </p>
@@ -350,6 +355,7 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
 
