--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
                             <br>
                             password: <b>123456</b> 
                             <br>
-                            <br>(For security reason do not Remember me, else it will fali to login)
+                            <br>(For security reason, when login with <b>admin account</b>, do not Remember me, else it will fali to login)
                             </p>
                         <a href="https://workhard-b5zs.onrender.com/" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
                         <a href="https://github.com/alanluk2226/Workhard" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Github</a>
@@ -355,6 +355,7 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
 
